--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -108,7 +108,7 @@
   </servlet-mapping>
   <context-param>
     <param-name>webAppRootKey</param-name>
-    <param-value>pms.root</param-value>
+    <param-value>springmvc-ibatis-platform.root</param-value>
   </context-param>
   <context-param>
     <param-name>log4jConfigLocation</param-name>
@@ -116,7 +116,7 @@
   </context-param>
   <context-param>
     <param-name>log4jRefreshInterval</param-name>
-    <param-value>10000</param-value>
+    <param-value>3000</param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
