add hessian support

--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,14 @@
 			<version>4.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>4.0.38</version>
+		</dependency>
+
+
+
 	</dependencies>
 
   	<build>
