--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -136,6 +136,10 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
+    <url-pattern>/hessian/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>dispatcher</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   <context-param>
